--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -3,11 +3,12 @@ endpoint: http://localhost:4466
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel:
-  - user.prisma
-  - course.prisma
-  - prof.prisma
-  - review.prisma
-  - position.prisma
+  - ./models/user.prisma
+  - ./models/course.prisma
+  - ./models/prof.prisma
+  - ./models/review.prisma
+  - ./models/position.prisma
+  - ./models/tag.prisma
 
 # Specifies the language and directory for the generated Prisma client.
 generate:
@@ -21,4 +22,4 @@ hooks:
 
 # Seeds initial data into the database by running a script.
 seed:
-  run: node ./seed.js
+  run: node ./prisma/seed/index.js
