--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -22,4 +22,4 @@ hooks:
 
 # Seeds initial data into the database by running a script.
 seed:
-  run: node ./prisma/seed/index.js
+  run: node ./seed/index.js
