--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "prisma-client-lib": "^1.34.1"
+    "prisma-client-lib": "^1.34.1",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {},
   "scripts": {
