--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -9,16 +9,12 @@ datamodel:
   - ./models/review.prisma
   - ./models/position.prisma
   - ./models/tag.prisma
+  - ./models/dept.prisma
 
 # Specifies the language and directory for the generated Prisma client.
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client/
-
-# Ensures Prisma client is re-generated after a datamodel change.
-hooks:
-  post-deploy:
-    - prisma generate
 
 # Seeds initial data into the database by running a script.
 seed:
