--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "apollo-server": "^2.6.9",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^14.4.2",
+    "graphql-import": "^0.7.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma-client-lib": "^1.34.1",
     "xlsx": "^0.14.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon app.js",
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
