--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "nodemon app.js",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js --ext js,graphql"
   },
   "repository": {
     "type": "git",
