--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -10,11 +10,14 @@ datamodel:
   - ./models/position.prisma
   - ./models/tag.prisma
   - ./models/dept.prisma
+  - ./models/feedback.prisma
 
 # Specifies the language and directory for the generated Prisma client.
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client/
+  - generator: graphql-schema
+    output: ../src/generated/prisma.graphql
 
 # Seeds initial data into the database by running a script.
 seed:
